--- a/public/how.html
+++ b/public/how.html
@@ -15,7 +15,57 @@
   <body>
     <div id="navbar"></div>
     <div id="content">
-      <h1>How Page.</h1>
+      <div class="title how"><span><span class="fr">Comment le faisons?</span></span></div>
+      <div class="description">
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-content">
+              <div class="mini-title how">
+                <div class="fr">Co-création</div>
+              </div>
+              <p>Evolution Coaching est unique dans son engagement à la co-crèation. En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes un dialogue dynamique et flexible émerge pour répondre aux besoins changeants de l’enterprise, l’équipe de leadership et les exécutifs seniors.</p>
+            </div>
+            <div class="mini-desc-img"><img src="img/header icons/co-creation-icon.svg"></div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-img second"><img src="img/header icons/stop-look-listen-icon.svg"></div>
+            <div class="mini-desc-content">
+              <div class="mini-title how center">
+                <div class="fr">Arrêt, observation, écoute</div>
+              </div>
+              <p>Nous créons un environnement où le client peut s’arrêter, observer et écouter. Dans un contexte de respect et de confidentialité, les clients se trouvent souvent face au défil de s’aligner avec leurs soi intêrieur et d’être à l’écoute de leur identité.</p>
+              <p>Ce processus créé une transformation.</p>
+            </div>
+            <div class="mini-desc-img second-mobile"><img src="img/header icons/stop-look-listen-icon.svg"></div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-content">
+              <div class="mini-title how">
+                <div class="fr">Connaissance de soi</div>
+              </div>
+              <p>A travers le processus de coaching, une meilleure connaissance de sol émerge. Cela pourvoit de la clarté, ce qui énergise. Un résultat intentionné émerge et fournit un chemin de coaching du développement. Accepter sa personnalité (côté ombre et côté lumière), s’approprier son style de leadership, permettre d’évoluer en tant qu’être humain et leader.</p>
+            </div>
+            <div class="mini-desc-img"><img src="img/header icons/self-awareness-icon.svg"></div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-img second"><img src="img/header icons/supervision-icon.svg"></div>
+            <div class="mini-desc-content">
+              <div class="mini-title how center">
+                <div class="fr">Supervision</div>
+              </div>
+              <p>A travers le processus de supervision des observations significatives émergent de manière respectueuse et élégante afin de mieux servir le client final.</p>
+            </div>
+            <div class="mini-desc-img second-mobile"><img src="img/header icons/supervision-icon.svg"></div>
+          </div>
+        </div>
+      </div>
+      <div class="footer"></div>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="js/templates.js"></script><script src='js/main.js'></script>
