--- a/public/contact.html
+++ b/public/contact.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="description" content="Evolution Coaching official website.">
-    <meta name="author" content="Andrei Constantinescu">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>/contact.html</title><link rel='stylesheet' href='css/master.css' />
-<link rel='stylesheet' href='css/navbar.css' />
-<link rel='stylesheet' href='css/pages.css' />
-<link rel='stylesheet' href='css/vendor/bootstrap-theme.css' />
-<link rel='stylesheet' href='css/vendor/bootstrap.css' />
-  </head>
-  <body>
-    <div id="navbar"></div>
-    <div id="content">
-      <div class="title contact"><span><span class="fr">Comment nous contacter</span></span></div>
-      <div class="description">
-        <div class="contact-info">
-          <p>email: <a href="mailto:info@evolution-coaching.org">info@evolution-coaching.org</a></p>
-          <p>Phone:
-            <ul> 
-              <li>+44 (0) 7971 534 005</li>
-              <li>+44 (0) 6971 638 895</li>
-            </ul>
-          </p>
-        </div>
-        <div class="contact-img"><img src="img/header icons/contact-icon.svg"></div>
-      </div>
-      <div class="footer"></div>
-    </div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="js/templates.js"></script><script src='js/main.js'></script>
-<script src='js/vendor/1-jquery-1.12.4.min.js'></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="Evolution Coaching official website."><meta name="author" content="Andrei Constantinescu"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>/contact.html</title><link rel='stylesheet' href='css/build.42405c892e21111b441df6f7e7fc941c.css' /></head><body><div id="navbar"></div><div id="content"><div class="title contact"><span><span class="fr">Comment nous contacter</span></span></div><div class="description"><div class="contact-info"><p>email: <a href="mailto:info@evolution-coaching.org">info@evolution-coaching.org</a></p><p>Phone:<ul> <li>+44 (0) 7971 534 005</li><li>+44 (0) 6971 638 895</li></ul></p></div><div class="contact-img"><img src="img/header icons/contact-icon.svg"></div></div><div class="footer"></div></div><script src="https://code.jquery.com/jquery-2.2.4.min.js"></script><script src="js/templates.js"></script><script src='js/build.82bee976f0519fe0909d3b4bae43f397.js'></script></body></html>
