--- a/public/contact.html
+++ b/public/contact.html
@@ -15,7 +15,9 @@
   <body>
     <div id="navbar"></div>
     <div id="content">
-      <div class="title contact"><span><span class="fr">Comment nous contacter</span></span></div>
+      <div class="title contact"><span><span>
+            <div class="fr">Comment nous contacter</div>
+            <div class="en">Contact us</div></span></span></div>
       <div class="description">
         <div class="contact-info">
           <p>email: <a href="mailto:info@evolution-coaching.org">info@evolution-coaching.org</a></p>
@@ -28,6 +30,7 @@
         </div>
         <div class="contact-img"><img src="img/header icons/contact-icon.svg"></div>
       </div>
+      <div class="contact-street"><img src="img/street.jpg"></div>
       <div class="footer"></div>
     </div>
     <script src="js/vendor/1-jquery-1.12.4.min.js"></script>
