--- a/public/how.html
+++ b/public/how.html
@@ -15,15 +15,21 @@
   <body>
     <div id="navbar"></div>
     <div id="content">
-      <div class="title how"><span><span class="fr">Comment le faisons?</span></span></div>
+      <div class="title how"><span><span>
+            <div class="fr">Comment le faisons?</div>
+            <div class="en">How do we do it?</div></span></span></div>
       <div class="description">
         <div class="item">
           <div class="mini-desc">
             <div class="mini-desc-content">
               <div class="mini-title how">
                 <div class="fr">Co-création</div>
+                <div class="en">Co-creation</div>
               </div>
-              <p>Evolution Coaching est unique dans son engagement à la co-crèation. En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes un dialogue dynamique et flexible émerge pour répondre aux besoins changeants de l’enterprise, l’équipe de leadership et les exécutifs seniors.</p>
+              <p> 
+                <div class="fr">Evolution Coaching est unique dans son engagement à la co-crèation. En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes un dialogue dynamique et flexible émerge pour répondre aux besoins changeants de l’enterprise, l’équipe de leadership et les exécutifs seniors.</div>
+                <div class="en">Evolution Coaching is unique in its commitment to co-creation. In providing broad perspectives and working closely with all stakeholders a dynamic, flexible and generative dialogue evolves to meet the changing needs of business, the leadership team and senior executives</div>
+              </p>
             </div>
             <div class="mini-desc-img"><img src="img/header icons/co-creation-icon.svg"></div>
           </div>
@@ -34,9 +40,13 @@
             <div class="mini-desc-content">
               <div class="mini-title how center">
                 <div class="fr">Arrêt, observation, écoute</div>
+                <div class="en">Stop, look, listen</div>
               </div>
-              <p>Nous créons un environnement où le client peut s’arrêter, observer et écouter. Dans un contexte de respect et de confidentialité, les clients se trouvent souvent face au défil de s’aligner avec leurs soi intêrieur et d’être à l’écoute de leur identité.</p>
-              <p>Ce processus créé une transformation.</p>
+              <p> 
+                <div class="fr">Nous créons un environnement où le client peut s’arrêter, observer et écouter. Dans un contexte de respect et de confidentialité, les clients se trouvent souvent face au défil de s’aligner avec leurs soi intêrieur et d’être à l’écoute de leur identité.</div>
+                <div class="en">We create an environment where the client can 'stop, look and listen'. Providing respect and confidentiality, clients are often challenges to become tunes in to their inner-self and to be aligned with their identity. This process created transformational change.</div>
+              </p>
+              <p class="fr">Ce processus créé une transformation.</p>
             </div>
             <div class="mini-desc-img second-mobile"><img src="img/header icons/stop-look-listen-icon.svg"></div>
           </div>
@@ -46,8 +56,12 @@
             <div class="mini-desc-content">
               <div class="mini-title how">
                 <div class="fr">Connaissance de soi</div>
+                <div class="en">Self-awareness</div>
               </div>
-              <p>A travers le processus de coaching, une meilleure connaissance de sol émerge. Cela pourvoit de la clarté, ce qui énergise. Un résultat intentionné émerge et fournit un chemin de coaching du développement. Accepter sa personnalité (côté ombre et côté lumière), s’approprier son style de leadership, permettre d’évoluer en tant qu’être humain et leader.</p>
+              <p> 
+                <div class="fr">A travers le processus de coaching, une meilleure connaissance de sol émerge. Cela pourvoit de la clarté, ce qui énergise. Un résultat intentionné émerge et fournit un chemin de coaching du développement. Accepter sa personnalité (côté ombre et côté lumière), s’approprier son style de leadership, permettre d’évoluer en tant qu’être humain et leader.</div>
+                <div class="en">Through the coaching process, self-awareness emerges. This provides for clarity, which in turn energies. A purposeful outcome emerges and provides a routemap for ongoing development coaching.</div>
+              </p>
             </div>
             <div class="mini-desc-img"><img src="img/header icons/self-awareness-icon.svg"></div>
           </div>
@@ -58,8 +72,12 @@
             <div class="mini-desc-content">
               <div class="mini-title how center">
                 <div class="fr">Supervision</div>
+                <div class="en">Supervision</div>
               </div>
-              <p>A travers le processus de supervision des observations significatives émergent de manière respectueuse et élégante afin de mieux servir le client final.</p>
+              <p>
+                <div class="fr">A travers le processus de supervision des observations significatives émergent de manière respectueuse et élégante afin de mieux servir le client final.</div>
+                <div class="en">Through the supervision process meaningful observations and offered en elegant and respectful manner.</div>
+              </p>
             </div>
             <div class="mini-desc-img second-mobile"><img src="img/header icons/supervision-icon.svg"></div>
           </div>
