--- a/public/who.html
+++ b/public/who.html
@@ -15,28 +15,38 @@
   <body>
     <div id="navbar"></div>
     <div id="content">
-      <div class="title who"><span><span class="fr">Qui sommes nous</span></span></div>
+      <div class="title who"><span><span>
+            <div class="fr">Qui sommes nous</div>
+            <div class="en">Who are we?</div></span></span></div>
       <div class="description">
         <div class="text">
           <div class="fr">Anne Roques et la gérante fondatrice de Evolution Coaching.</div>
+          <div class="en">Evolution coaching is led by Anne Roques.</div>
         </div>
         <div class="list">
           <ul>
             <li>
               <div class="fr">Avec plus de 18 ans d'expérience dans le monde du business international, C'est une master coach professionnel qualifiée du International Coach Fédération (ICF)  et un membre associé de la Société Françqise de Coaching.  elle est maître praticien en programmation NeuroLinguistic (NLP)  et une facilitatrice de  “clean  language”.</div>
+              <div class="en">We are bilingual-French and multicultural having lives and work outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context</div>
             </li>
             <li>
               <div class="fr">Année aussi une superviseure pour Coaching Supervision Academy (2009) et l'Association of Coaching Supervisors (2011)</div>
+              <div class="en">We have strong business backgrounds across multiple sectors, which means that we understand the territory - often characterised by compleity, pressure and fast-pace</div>
             </li>
             <li>
               <div class="fr">Elle est diplômée pour utiliser l’outil HoganLead Assessment,  accréditée pour gérer les conflits et certifiée facilitatrice en systémique organisationnelle. </div>
+              <div class="en">We demonstrate and pratice agility and rigor through a minimalist questioning style, this means clients find their own solutions are empowered to take action</div>
             </li>
             <li>
               <div class="fr">Nous démontrons et pratique l'agilité et la rigueur à travers un style de questionnement minimaliste, cela signifie que les clients à trouver leurs propres solutions et sont compétents pour prendre des mesures.</div>
+              <div class="en">With over 18 years in international business, she is a professional certified master coach with International Coach Federation (ICF) and an Associate Member of the French Society of Coaching. She is a Master Practitioner in NeuroLinguistic Programming (NLP) and a ckean anguage facilitator</div>
             </li>
+            <li class="en">Anne is also an accredited supervisor for coaches certified with Coaching Supervision Academy (2009) and the Association of Coaching Supervisors (2011).</li>
+            <li class="en">She was certified to use the HoganLead Assessment tool (2012)</li>
           </ul>
         </div>
       </div>
+      <div class="who-image"><img src="/img/photo-1.png"></div>
       <div class="footer"></div>
     </div>
     <script src="js/vendor/1-jquery-1.12.4.min.js"></script>
