--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,39 @@
-<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="Evolution Coaching official website."><meta name="author" content="Andrei Constantinescu"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Evolution Coaching</title><link rel='stylesheet' href='css/build.aeec99f08bdb63a19337058bb5b2b74e.css' /></head><body><div id="navbar"></div><div id="content"><div class="title contact"><span><span><div class="fr">Comment nous contacter</div><div class="en">Contact us</div></span></span></div><div class="description"><div class="contact-info"><p>email: <a href="mailto:info@evolution-coaching.org">info@evolution-coaching.org</a></p><p>Phone:<ul> <li>+44 (0) 7971 534 005</li><li>+44 (0) 6971 638 895</li></ul></p></div><div class="contact-img"><img src="img/header icons/contact-icon.svg"></div></div><div class="contact-street"><img src="img/street.jpg"></div><div class="footer"></div></div><script src="https://code.jquery.com/jquery-2.2.4.min.js"></script><script src="js/templates.js"></script><script src='js/build.e3126ebd8748ce0d7e8895792845eda3.js'></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="description" content="Evolution Coaching official website.">
+    <meta name="author" content="Andrei Constantinescu">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
+    <title>Evolution Coaching</title><link rel='stylesheet' href='css/master.css' />
+<link rel='stylesheet' href='css/navbar.css' />
+<link rel='stylesheet' href='css/pages.css' />
+<link rel='stylesheet' href='css/vendor/bootstrap-theme.css' />
+<link rel='stylesheet' href='css/vendor/bootstrap.css' />
+  </head>
+  <body>
+    <div id="navbar"></div>
+    <div id="content">
+      <div class="title contact"><span><span>
+            <div class="fr">Comment nous contacter</div>
+            <div class="en">Contact us</div></span></span></div>
+      <div class="description">
+        <div class="contact-info">
+          <p>email: <a href="mailto:info@evolution-coaching.org" style="padding-left: 50px ">info@evolution-coaching.org</a></p><span>Phone:
+            <ul class="phone-list">
+              <li>+44 (0) 7971 534 005</li>
+              <li>+44 (0) 6971 638 895</li>
+            </ul></span>
+        </div>
+        <div class="contact-img"><img src="img/header icons/contact-icon.svg"></div>
+      </div>
+      <div class="contact-street"><img src="img/street.jpg"></div>
+      <div class="footer"></div>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="js/templates.js"></script><script src='js/main.js'></script>
+<script src='js/vendor/1-jquery-1.12.4.min.js'></script>
+  </body>
+</html>
